[package]
name = "ddos_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.34"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
numpy = "0.25.0"
ndarray = "0.16.1"
ctrlc = "3.4.7"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
pyo3-build-config = "0.25.1"
