[package]
name = "ddos_ai"
version = "0.1.0"
edition = "2021"
[dependencies]
pnet = "0.35.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
numpy = "0.25.0"
ndarray = "0.16.1"
ctrlc = "3.4.7"
log = "0.4"
env_logger = "0.11"
socket2 = "0.6.0"
winapi = { version = "0.3", features = ["winsock2", "ws2def", "ws2ipdef", "winbase", "handleapi"] }
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
crossbeam-channel = "0.5"
rayon = "1.8"
parking_lot = "0.12"
dashmap = "6.1.0"
threadpool = "1.8"
num_cpus = "1.16"
# 🔥 MEMORY POOL & SIMD PERFORMANCE BOOST!
object-pool = "0.6.0"
wide = "0.7"
crossbeam-queue = "0.3"
# 🚀 RAW SOCKET ULTIMATE SPEED!
memmap2 = "0.9"
# 📊 PERFORMANCE MONITORING (Windows-compatible)
criterion = "0.7.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "psapi", "pdh"] }
[build-dependencies]
pyo3-build-config = "0.25.1"
